# radar_economico_merida

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
analysis/analysis/: eda_denue_processed.ipynb
app/: __init__.py  app.py  charts.py  data.py  filters.py  main.py  map_view.py
config/: settings.yaml
docs/: crisp_dm.md
etl/: build_snapshot.py  check_updates.py  common.py  extract_denue.py  extract_merida.py  run_pipeline.py  schema.py  transform_data.py
tests/: test_app_data.py  test_build_snapshot.py  test_check_updates.py  test_run_pipeline.py  test_schema.py  test_smoke.py  test_transform_data.py
