[project]
name = "radar-economico-merida"
version = "0.1.0"
description = "Dashboard geoespacial end-to-end en Streamlit para analizar la actividad economica de Merida con ETL versionado."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit>=1.43",
    "pandas>=2.2",
    "requests>=2.32",
    "pyarrow>=19.0",
    "pydeck>=0.9",
    "geopandas>=1.0",
    "shapely>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.0",
    "altair>=5.0",
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
