[project]
name = "radar-economico-merida"
version = "0.1.0"
description = "Dashboard geoespacial end-to-end en Streamlit para analizar la actividad economica de Merida con ETL versionado."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "altair>=5.0",
    "geopandas>=1.0",
    "matplotlib>=3.7",
    "pandas>=2.2",
    "plotly>=5.0",
    "pyarrow>=19.0",
    "pydeck>=0.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "requests>=2.32",
    "seaborn>=0.12",
    "shapely>=2.0",
    "streamlit>=1.43",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.11",
]

[tool.uv]
default-groups = ["dev"]
package = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
